--- a/plugin.xml
+++ b/plugin.xml
@@ -2,6 +2,10 @@
 <plugin id="com.telerik.stripe" version="1.0.6" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>Stripe</name>
 
+    <description>
+	This plugin is used to access the Stripe payment API from phonegap apps.
+    </description>
+
     <preference name="API_KEY" />
 
 
